# SpaceX-API

./: .docker-compose.yml  .dockerignore  .editorconfig  .envrc  .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitlab-ci.yml  .travis.yml  API Tests  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  Procfile  README.md  Rakefile  Test  app.js  app.json  app.rb  apps.md  chandan-Flight  clients.md  codecov.yml  config.json  config.ru  deploy-key.enc  docker-compose.yml  docker_build.sh  error.erb  go.mod  go.sum  main.go  package-lock.json  package.json  (+4 more)
.circleci/: config.yml
.github/: dependabot.yml
builders/: capsule-query.js  core-query.js  launch-query.js
capsule/: capsule.go
config/: config.json
core/: core.go
coverage/: .last_run.json  .resultset.json
crew/: crew.go
data/: company_info.rb  dragon.rb  falcon1.rb  falcon9.rb  falcon_1.rb  falcon_heavy.rb  home_info.rb  info.rb  launches.rb  launchpads.rb  sites.rb
deploy/: Caddyfile  docker-stack.yml
docs/: .editorconfig  .gitignore  CNAME  Core-Details.md  Home.md  LICENSE.md  Launches.md  README.md  Rakefile  Rocket-Info.md  _config.yml  api_clients.md  apps.md  capsule.md  capsule_detail.md  capsules.md  clients.md  company_info.md  core_detail.md  development.md  home.md  index.md  jekyll-docs-theme.gemspec  launches.md  launchpad.md  launchpads.md  parts.md  queries.md  roadster.md  rocket.md  rockets.md
dragon/: dragon.go
jobs/: Dockerfile  capsules.js  cores.js  fairings.js  landpads.js  launch-library.js  launches.js  launchpads.js  (+7 more)
(+677 files in other folders)
