[package]
name = "spacex-api-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.56"
async-graphql = "3.0.38"
async-graphql-actix-web = "3.0.38"
dotenv = "0.15.0"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "offline", "macros", "migrate" ] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-actix-web = "0.5.1"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]

